<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/closeButton"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="15dp"
            android:layout_height="23dp"
            android:textColor="@color/black"
            android:background="@drawable/back" />

        <TextView
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/upload_imageView"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/upload_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="130dp"
        android:layout_height="130dp" />

    <EditText
        android:id="@+id/full_name_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/full_name"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="50dp" />
    <EditText
        android:id="@+id/email_edit_text"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_border"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/full_name_edit_text"
        app:layout_constraintEnd_toEndOf="@id/full_name_edit_text"
        app:layout_constraintStart_toStartOf="@id/full_name_edit_text"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/gray"
        android:hint="@string/email"
        android:layout_width="0dp"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintEnd_toEndOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="@id/email_edit_text"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/gray"
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/singUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/button_color"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/upload_imageView"
        app:layout_constraintEnd_toEndOf="@id/upload_imageView"
        app:layout_constraintStart_toStartOf="@id/upload_imageView"
        app:layout_constraintTop_toTopOf="@id/upload_imageView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1"
        app:srcCompat="@drawable/ic_menu_camera" />

</android.support.constraint.ConstraintLayout>