<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageVIew"
                android:layout_marginTop="80dp"
                android:src="@drawable/upload_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="128dp"
                android:layout_height="128dp" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/con1"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/profileImageVIew"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="Name"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/userNameEditText"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/username_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/con1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/con2"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/con1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="Email"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/con2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/con3"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/con2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="Password"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/con3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/con4"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/con3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="Confirm Password"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/con4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/con5"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/con4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="Location"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/locationEditText"
                    android:paddingEnd="20dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/con5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/button_color"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>